<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Calculator</string>
    <string name="placeholder" tools:keep="@string/placeholder">Enter a number</string>
    <string name="bnAdd">+</string>
    <string name="bnMinus">-</string>
    <string name="bnDiv">:</string>
    <string name="bnMul">x</string>
    <string name="bnResult">=</string>
    <string name="bnZero">0</string>
    <string name="bnOne">1</string>
    <string name="bnTwo">2</string>
    <string name="bnThree">3</string>
    <string name="bnFour">4</string>
    <string name="bnFive">5</string>
    <string name="bnSix">6</string>
    <string name="bnDot">.</string>
    <string name="bnSeven">7</string>
    <string name="bnEight">8</string>
    <string name="bnNine">9</string>
    <string name="bnDel">DE</string>
    <string name="bnSquare">√</string>
    <string name="bnCE">CE</string>
    <string name="bnSign">+/-</string>
    <string name="bnEmpty"/>
    <string name="error">Divide by zero?</string>
</resources>
